--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
  body {
       position: relative;
       height: 100%;
+      background-color:#B6B09F;
     }
+
+.product-list{
+  background-color: #EAE4D5;
+}
 
     
