--- a/style.css
+++ b/style.css
@@ -1,11 +1,21 @@
- body {
-      position: relative;
-      height: 100%;
-      background-color:#B6B09F;
-    }
-
-.product-list{
-  background-color: #EAE4D5;
+body {
+  position: relative;
+  height: 100%;
+  background-color: #b6b09f;
 }
 
-    
+.product-list {
+  background-color: #eae4d5;
+}
+
+.products-list {
+  padding: 20px;
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  flex-wrap: wrap;
+}
+
+.order {
+  display: none;
+}
